DigicielFull/force-app/main/default/objects/Case/fields/Name_of_New_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_of_New_Account__c</fullName>
    <label>Name of New Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>