DigicielFull/force-app/main/default/objects/Case/fields/New_MRR_Billed__c.field-meta.xml
<CustomField>
    <fullName>New_MRR_Billed__c</fullName>
    <inlineHelpText>Enter Full MRR even if activated MID Month</inlineHelpText>
    <label>New MRR Billed (Full Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>