DigicielFull/force-app/main/default/objects/Case/fields/No_of_DIDs_Requested__c.field-meta.xml
<CustomField>
    <fullName>No_of_DIDs_Requested__c</fullName>
    <description>Created for the Service Operations Center Team in Trinidad</description>
    <label>No. of DIDs Requested</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>