DigicielFull/force-app/main/default/objects/Case/fields/NRR_Billed__c.field-meta.xml
<CustomField>
    <fullName>NRR_Billed__c</fullName>
    <label>NRR Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>