DigicielFull/force-app/main/default/objects/Case/fields/Opp_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Opp_Contract_Term__c</fullName>
    <formula>Opportunity__r.Contract_Term_SP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>