DigicielFull/force-app/main/default/objects/Case/fields/Opp_NRR__c.field-meta.xml
<CustomField>
    <fullName>Opp_NRR__c</fullName>
    <formula>Opportunity__r.PNG_NRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>