DigicielFull/force-app/main/default/objects/Case/fields/Opportunity_Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sale_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Sale_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Sale Type</label>
    <type>Text</type>
</CustomField>