DigicielFull/force-app/main/default/objects/Case/fields/PBX_Model__c.field-meta.xml
<CustomField>
    <fullName>PBX_Model__c</fullName>
    <label>PBX Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>