DigicielFull/force-app/main/default/objects/Case/fields/PNG_ActualInstallationStartDate__c.field-meta.xml
<CustomField>
    <fullName>PNG_ActualInstallationStartDate__c</fullName>
    <label>Actual Installation Start Date</label>
    <type>Date</type>
</CustomField>