DigicielFull/force-app/main/default/objects/Case/fields/PNG_BillingConfirmed__c.field-meta.xml
<CustomField>
    <fullName>PNG_BillingConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Confirmed</label>
    <type>Checkbox</type>
</CustomField>