DigicielFull/force-app/main/default/objects/Case/fields/PNG_CallCentreAgent__c.field-meta.xml
<CustomField>
    <fullName>PNG_CallCentreAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Centre Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PNG_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>