DigicielFull/force-app/main/default/objects/Case/fields/PNG_CaseCategoryCE__c.field-meta.xml
<CustomField>
    <fullName>PNG_CaseCategoryCE__c</fullName>
    <label>Case Category – C&amp;E</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Payments &amp; Invoicing</fullName>
            </value>
            <value>
                <fullName>Queries &amp; Reports</fullName>
            </value>
            <value>
                <fullName>Service Provisioning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>