DigicielFull/force-app/main/default/objects/Case/fields/PNG_CaseRequestSubTypeCE__c.field-meta.xml
<CustomField>
    <fullName>PNG_CaseRequestSubTypeCE__c</fullName>
    <label>Case Request Sub-Type – C&amp;E</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PNG_CaseRequestTypeCE__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Update</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Installation/ configuration</fullName>
            </value>
            <value>
                <fullName>IP allocation</fullName>
            </value>
            <value>
                <fullName>HW/SW</fullName>
            </value>
            <value>
                <fullName>Service relocation</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Restoration</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Disputing Charges/ Reconciliation</fullName>
            </value>
            <value>
                <fullName>Extension of Credit terms</fullName>
            </value>
            <value>
                <fullName>Processing Credit Note / Write-off</fullName>
            </value>
            <value>
                <fullName>Data Top Up</fullName>
            </value>
            <value>
                <fullName>Traffic report</fullName>
            </value>
            <value>
                <fullName>Calls report</fullName>
            </value>
            <value>
                <fullName>Custom report</fullName>
            </value>
            <value>
                <fullName>Service down</fullName>
            </value>
            <value>
                <fullName>Calls dropping</fullName>
            </value>
            <value>
                <fullName>Unable to make/ receive calls</fullName>
            </value>
            <value>
                <fullName>Desktop survey</fullName>
            </value>
            <value>
                <fullName>On-site survey (URBAN)</fullName>
            </value>
            <value>
                <fullName>On-site survey (RURAL)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>