DigicielFull/force-app/main/default/objects/Case/fields/PNG_CoCSignedByCustomer__c.field-meta.xml
<CustomField>
    <fullName>PNG_CoCSignedByCustomer__c</fullName>
    <label>CoC Signed by Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>