DigicielFull/force-app/main/default/objects/Case/fields/PNG_IndependentContractor__c.field-meta.xml
<CustomField>
    <fullName>PNG_IndependentContractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Independent Contractor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Independent Contractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>PNG_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>