DigicielFull/force-app/main/default/objects/Case/fields/PNG_Mobile__c.field-meta.xml
<CustomField>
    <fullName>PNG_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>