DigicielFull/force-app/main/default/objects/Case/fields/PNG_OwnerManagerUser__c.field-meta.xml
<CustomField>
    <fullName>PNG_OwnerManagerUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Manager User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>