DigicielFull/force-app/main/default/objects/Case/fields/PNG_PlannedInstallationDate__c.field-meta.xml
<CustomField>
    <fullName>PNG_PlannedInstallationDate__c</fullName>
    <label>Planned Installation Date</label>
    <type>Date</type>
</CustomField>