DigicielFull/force-app/main/default/objects/Case/fields/PNG_ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>PNG_ProductInterest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>