DigicielFull/force-app/main/default/objects/Case/fields/PNG_RootCause__c.field-meta.xml
<CustomField>
    <fullName>PNG_RootCause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fibre Damage</fullName>
            </value>
            <value>
                <fullName>LAN issue</fullName>
            </value>
            <value>
                <fullName>Line of Sight</fullName>
            </value>
            <value>
                <fullName>03B Outage</fullName>
            </value>
            <value>
                <fullName>PMP Node Offline</fullName>
            </value>
            <value>
                <fullName>SM Idle</fullName>
            </value>
            <value>
                <fullName>Power Issue – site</fullName>
            </value>
            <value>
                <fullName>Power Issue – customer</fullName>
            </value>
            <value>
                <fullName>IP core issue</fullName>
            </value>
            <value>
                <fullName>International link issue</fullName>
            </value>
            <value>
                <fullName>Transmission issue</fullName>
            </value>
            <value>
                <fullName>RF Interference</fullName>
            </value>
            <value>
                <fullName>Capacity exceeded</fullName>
            </value>
            <value>
                <fullName>Faulty equipment – customer</fullName>
            </value>
            <value>
                <fullName>Faulty play box-no power</fullName>
            </value>
            <value>
                <fullName>Faulty connectors/splitters-loose/broken</fullName>
            </value>
            <value>
                <fullName>Faulty cable-cut/worn out</fullName>
            </value>
            <value>
                <fullName>Broken/Damaged Antenna or Dish</fullName>
            </value>
            <value>
                <fullName>Faulty parts &gt; example: LNB/Amplifier/etc…</fullName>
            </value>
            <value>
                <fullName>Relocation/Move</fullName>
            </value>
            <value>
                <fullName>Relocate of antenna/dish</fullName>
            </value>
            <value>
                <fullName>Removal of equipment(antenna/dish/cable)</fullName>
            </value>
            <value>
                <fullName>New Hook up(s)</fullName>
            </value>
            <value>
                <fullName>Additional Installation(s)</fullName>
            </value>
            <value>
                <fullName>Swap from DTT to DTH</fullName>
            </value>
            <value>
                <fullName>Extension of cable(s)</fullName>
            </value>
            <value>
                <fullName>Termination &amp; Commissioning</fullName>
            </value>
            <value>
                <fullName>No signal</fullName>
            </value>
            <value>
                <fullName>Scramble message</fullName>
            </value>
            <value>
                <fullName>Pixelate pictures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>