DigicielFull/force-app/main/default/objects/Case/fields/PNG_StoppedComments__c.field-meta.xml
<CustomField>
    <fullName>PNG_StoppedComments__c</fullName>
    <label>Stopped Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>