DigicielFull/force-app/main/default/objects/Case/fields/Primary_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PrimaryCaseOwner</relationshipName>
    <type>Lookup</type>
</CustomField>