DigicielFull/force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Created for the Service Operations Center Team in Trinidad</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broadband (FTTB)</fullName>
            </value>
            <value>
                <fullName>Broadband (FTTH)</fullName>
            </value>
            <value>
                <fullName>DIA</fullName>
            </value>
            <value>
                <fullName>DPLC</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>Fixed Line</fullName>
            </value>
            <value>
                <fullName>Global Connect (MPLS)</fullName>
            </value>
            <value>
                <fullName>GSM Gateways</fullName>
            </value>
            <value>
                <fullName>Hosted PBX</fullName>
            </value>
            <value>
                <fullName>SIP Trunking</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Data Centre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>