DigicielFull/force-app/main/default/objects/Case/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>State or Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Autonomous Region of Bougainville</fullName>
            </value>
            <value>
                <fullName>Central Province</fullName>
            </value>
            <value>
                <fullName>Chimbu Province</fullName>
            </value>
            <value>
                <fullName>Eastern Highlands Province</fullName>
            </value>
            <value>
                <fullName>East New Britain Province</fullName>
            </value>
            <value>
                <fullName>East Sepik Province</fullName>
            </value>
            <value>
                <fullName>Enga Province</fullName>
            </value>
            <value>
                <fullName>Gulf Province</fullName>
            </value>
            <value>
                <fullName>Hela Province</fullName>
            </value>
            <value>
                <fullName>Jiwaka Province</fullName>
            </value>
            <value>
                <fullName>Madang Province</fullName>
            </value>
            <value>
                <fullName>Manus Province</fullName>
            </value>
            <value>
                <fullName>Milne Bay Province</fullName>
            </value>
            <value>
                <fullName>Morobe Province</fullName>
            </value>
            <value>
                <fullName>National Capital District</fullName>
            </value>
            <value>
                <fullName>New Ireland Province</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
            <value>
                <fullName>Oro Province</fullName>
            </value>
            <value>
                <fullName>Sandaun Province</fullName>
            </value>
            <value>
                <fullName>Southern Highlands Province</fullName>
            </value>
            <value>
                <fullName>Western Highlands Province</fullName>
            </value>
            <value>
                <fullName>Western Province</fullName>
            </value>
            <value>
                <fullName>West New Britain Province</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>