DigicielFull/force-app/main/default/objects/Case/fields/Resolution_Completion_Report__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Completion_Report__c</fullName>
    <label>Resolution/Completion Report</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>