DigicielFull/force-app/main/default/objects/Case/fields/Resolved_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Age_Days__c</fullName>
    <formula>DATETIMEVALUE(Resolved_Date_Time__c) - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolved Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>