DigicielFull/force-app/main/default/objects/Case/fields/Resolved_by_Agent__c.field-meta.xml
<CustomField>
    <fullName>Resolved_by_Agent__c</fullName>
    <label>Resolved by Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>