DigicielFull/force-app/main/default/objects/Case/fields/Resolved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date_Time__c</fullName>
    <label>Resolved Date/Time</label>
    <type>DateTime</type>
</CustomField>