DigicielFull/force-app/main/default/objects/Case/fields/Response_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Days__c</fullName>
    <formula>IF(Urgency__c = &quot;Critical&quot;,0.5,
IF(Urgency__c =&quot;High&quot;,1,
IF(Urgency__c = &quot;Medium&quot;,2,
IF(Urgency__c = &quot;Medium-2&quot;,3,
4))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>