DigicielFull/force-app/main/default/objects/Case/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <description>Dependent on New User creation</description>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Business Sales</fullName>
            </value>
            <value>
                <fullName>Strategic Sales</fullName>
            </value>
            <value>
                <fullName>Service Management</fullName>
            </value>
            <value>
                <fullName>Enterprise Sales</fullName>
            </value>
            <value>
                <fullName>Tele-Sales</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>ENTP</fullName>
            </value>
            <value>
                <fullName>Gov</fullName>
            </value>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>Key Deals</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Regional Accounts</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>FotS</fullName>
                <isActive>false</isActive>
                <label>FotS</label>
            </value>
            <value>
                <fullName>SOHO</fullName>
                <isActive>false</isActive>
                <label>SOHO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>