DigicielFull/force-app/main/default/objects/Case/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <inlineHelpText>Please enter the segment that this customer will be assigned to</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>SOHO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>