DigicielFull/force-app/main/default/objects/Case/fields/Service_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Type__c</fullName>
    <label>Service Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activation of Extensions</fullName>
            </value>
            <value>
                <fullName>Activation Request</fullName>
            </value>
            <value>
                <fullName>Analogue Line Integration</fullName>
            </value>
            <value>
                <fullName>Assistance required to set up port forwarding</fullName>
            </value>
            <value>
                <fullName>Assistance required to set up static IP</fullName>
            </value>
            <value>
                <fullName>Bandwidth Downgrade</fullName>
            </value>
            <value>
                <fullName>Bandwidth Upgrade</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Break/Fix</fullName>
            </value>
            <value>
                <fullName>Bulk SMS</fullName>
            </value>
            <value>
                <fullName>Call quality issues</fullName>
            </value>
            <value>
                <fullName>Calls dropping</fullName>
            </value>
            <value>
                <fullName>Cancel Service Request</fullName>
            </value>
            <value>
                <fullName>Cancellation Service Request</fullName>
            </value>
            <value>
                <fullName>Change password</fullName>
            </value>
            <value>
                <fullName>Cisco ASA Installation and Integration</fullName>
            </value>
            <value>
                <fullName>Configuration of Router/Switch/Firewall</fullName>
            </value>
            <value>
                <fullName>Conversions/Post/Pre</fullName>
            </value>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>Credit Limit Changes</fullName>
            </value>
            <value>
                <fullName>CUG Removals/Additions</fullName>
            </value>
            <value>
                <fullName>Customer Query/SR</fullName>
            </value>
            <value>
                <fullName>Customer Report</fullName>
            </value>
            <value>
                <fullName>Data Addition/Removal</fullName>
            </value>
            <value>
                <fullName>Data Issue - 2G</fullName>
            </value>
            <value>
                <fullName>Data Issue - 4G</fullName>
            </value>
            <value>
                <fullName>Data Issue - Technical</fullName>
            </value>
            <value>
                <fullName>Deactivation/Termination</fullName>
            </value>
            <value>
                <fullName>Desk Phones</fullName>
            </value>
            <value>
                <fullName>Develop Work Break Down Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>