DigicielFull/force-app/main/default/objects/Case/fields/SIM_Registered__c.field-meta.xml
<CustomField>
    <fullName>SIM_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIM Registered?</label>
    <type>Checkbox</type>
</CustomField>