DigicielFull/force-app/main/default/objects/Case/fields/Site_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Site_Coordinates__c</fullName>
    <label>Site Coordinates</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>