DigicielFull/force-app/main/default/objects/Case/fields/Speed_Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Speed_Test_Result__c</fullName>
    <defaultValue>&quot;Mbps Upload: &quot;</defaultValue>
    <description>This field was created for the TT SOC Field. DO NOT TOUCH</description>
    <label>Speed Test Result</label>
    <type>TextArea</type>
</CustomField>