DigicielFull/force-app/main/default/objects/Case/fields/Static_IP_Addresses_Required__c.field-meta.xml
<CustomField>
    <fullName>Static_IP_Addresses_Required__c</fullName>
    <label>Static IP Addresses Required</label>
    <length>40</length>
    <type>Text</type>
</CustomField>