DigicielFull/force-app/main/default/objects/Case/fields/Subsequent_Top_up_Top_up_done__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Top_up_Top_up_done__c</fullName>
    <label>Subsequent Top up/Top up done</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>