DigicielFull/force-app/main/default/objects/Case/fields/Support_unit__c.field-meta.xml
<CustomField>
    <fullName>Support_unit__c</fullName>
    <label>Support Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>