DigicielFull/force-app/main/default/objects/Case/fields/Towner_Site__c.field-meta.xml
<CustomField>
    <fullName>Towner_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Towner Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>