DigicielFull/force-app/main/default/objects/Case/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1 - Request - General</fullName>
            </value>
            <value>
                <fullName>L2 – Report Bug/Issue</fullName>
            </value>
            <value>
                <fullName>L2 – Request – New Feature (Requires Approval)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>