DigicielFull/force-app/main/default/objects/Case/fields/Was_your_query_resolved__c.field-meta.xml
<CustomField>
    <fullName>Was_your_query_resolved__c</fullName>
    <label>Was your query resolved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>- No Response -</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>