DigicielFull/force-app/main/default/objects/Case/recordTypes/Digicel_PNG_IT_Infra.recordType-meta.xml
<RecordType>
    <fullName>Digicel_PNG_IT_Infra</fullName>
    <active>true</active>
    <businessProcess>Digicel PNG IT Infra</businessProcess>
    <label>Digicel PNG IT Infra</label>
</RecordType>