DigicielFull/force-app/main/default/objects/Case/recordTypes/Live_Agent.recordType-meta.xml
<RecordType>
    <fullName>Live_Agent</fullName>
    <active>true</active>
    <businessProcess>Diaspora Support Process</businessProcess>
    <label>Live Agent</label>
</RecordType>