DigicielFull/force-app/main/default/objects/Case/recordTypes/SFDC_Admin_Ticket.recordType-meta.xml
<RecordType>
    <fullName>SFDC_Admin_Ticket</fullName>
    <active>true</active>
    <businessProcess>SFDC Admin Support Process</businessProcess>
    <description>Select this record type to send a case to the Saleforce Administration team</description>
    <label>SFDC Admin Ticket</label>
</RecordType>